# Fraction

./: CMakeLists.txt
include/: fraction.hpp
src/: fraction.cpp  fractionTest.cpp
